# iv_fitter_webui_mvp

./: .gitignore  00_validate_scripts.bat  01_check_environment.bat  01a_install_node_lts.bat  02_setup_dev.bat  03_test_backend.bat  04_run_dev.bat  04a_run_backend_only.bat  04b_run_frontend_only.bat  04c_run_lan_dev.bat  05_release_build.bat  06_build_windows_portable.bat  AUDIT_FIX_REPORT_1.8.18.md  CHANGELOG.md  DELIVERY_AUDIT.md  DEPENDENCIES.md  HANDOFF_1_3_14.md  HANDOFF_1_4_0.md  LICENSE  PROJECT_RULES.md  README.md  package-lock.json  package.json  prepare_publication_demo_data.bat  requirements.txt  validate_scripts.ps1  vite.config.ts
backend/: pyproject.toml
backend/ivfitter_web_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_audit_fixes_1_3_12.py  test_backend_mvp.py  test_backend_parity.py  test_bias_dependent_current_labels.py  test_bounds_suggestion.py  test_default_import_dir.py  test_fit_bottom_dock_layout_1_5_19.py  test_fit_metrics_near_zero.py  test_fit_process_diagnostics.py  test_fit_quality.py  test_function_guide_user_facing.py  test_graph_solver.py  test_happymeasure_import_multi.py  test_import_export.py  test_law_form_import.py  test_model_structure_cleanup.py  test_model_validation.py  test_multistart_config.py  test_parameter_stderr.py  test_photocurrent_models.py  test_publication_demo_import.py  test_report_export.py  test_report_export_1_5_15.py  test_schema_1_0.py  test_security_hardening_1_5_10.py  test_stabilization_refactor.py  test_synthetic_trace.py  test_workflow_ui_shell_1_5_19.py
(+250 files in other folders)
