[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivfitter-web-backend"
version = "1.7.8"
description = "Greenfield FastAPI backend prototype for IV-fitter"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2",
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ivfitter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
